Improved home screen and worked on search page. Have it connected to data. Data doesn't work on hololens emulator

--- a/DIY/DIY.csproj
+++ b/DIY/DIY.csproj
@@ -353,6 +353,7 @@
     <Compile Include="Assets\Scripts\GetData.cs" />
     <Compile Include="Assets\Scripts\JsonHelper.cs" />
     <Compile Include="Assets\Scripts\MockItem.cs" />
+    <Compile Include="Assets\Scripts\UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\HoloToolkit\Input\Shaders\Cursor.shader" />
